tests/invalid/Public_Invalid_3.whiley
type Hidden is (int x) where x >= 5

public function f(Hidden x) -> (int r):
    return 0

